added JavaScript to project

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
   <link rel="stylesheet" href="./assets/style.css">
-=======
->>>>>>> d6dec622f26a84d806942af7a5c36637fac2d038
   <title>Prework Study Guide</title>
 </head>
 
@@ -16,12 +13,10 @@
   <header id="top">
     <h1>Prework Study Guide</h1>
     <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
   </header>
-<<<<<<< HEAD
 
-=======
-  
->>>>>>> d6dec622f26a84d806942af7a5c36637fac2d038
+
   <main>
     <section class="card" id="html-section">
       <h2>HTML</h2>
@@ -36,13 +31,9 @@
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-<<<<<<< HEAD
         <li>A margin indicates how much space we want around the outside of an element.</li>
         <li>Padding indicates how much space we want around the content inside an element.</li>
         <li>The border property surrounds the element with a boarder of the width, colour, and line type specified.</li>
-=======
-        <li>Enter your CSS notes here</li>
->>>>>>> d6dec622f26a84d806942af7a5c36637fac2d038
       </ul>
 
     </section>
@@ -50,9 +41,9 @@
     <section class="card" id="git-section">
       <h2>Git</h2>
       <ul>
-        <li>git status: checks what branch we are currently on</li>
-        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-        <li>git add: stages file changes for the next commit</li>
+        <li>git status: checks what branch we are currently on.</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+        <li>git add: stages file changes for the next commit.</li>
       </ul>
 
     </section>
@@ -60,7 +51,9 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>JavaScript is a programming language used to add interactivity or "logic" to webpages and applications.</li>
+        <li>JavaScript files use the .js file extension.</li>
+        <li>JavaScript uses "for loops" and other types of loop to iterate over data.</li>
       </ul>
 
     </section>
@@ -69,6 +62,7 @@
   <footer>
     <p>I can code!</p>
   </footer>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
