Added JavaScript functions to project

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
+        <li>A variable is a named container that allows us to store data in our code.</li>
         <li>JavaScript is a programming language used to add interactivity or "logic" to webpages and applications.</li>
         <li>JavaScript files use the .js file extension.</li>
         <li>JavaScript uses "for loops" and other types of loop to iterate over data.</li>
